--- a/base-site-mu/index.html
+++ b/base-site-mu/index.html
@@ -3,8 +3,8 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Site Base | Sub Pages</title>
-    <meta name="description" content="This is a Starter HTML, CSS, and JS Boilerplate/Framework." />
+    <title>MS | Mu</title>
+    <meta name="description" content="This is a student site for learing HTML, CSS, and JS Boilerplate/Framework." />
 
     <!-- FOR SMALL SCREENS -->
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -15,6 +15,9 @@
     <!-- MAIN CSS FILE-->
     <link href="css/style.css" rel="stylesheet" type="text/css" />
 
+    <!--ADOBE FONT-->
+    <link rel="stylesheet" href="https://use.typekit.net/bnm7oer.css">
+
 </head>
 
 <body>
@@ -22,66 +25,95 @@
     <header class="site-header toggle-nav">
         <div class="container">
             <div class="site-id">
-                <h1><a href="../../index.html">MS</a></h1>
+                <h1><a href="index.html"><img src="img/logo_black.png">mu</a></h1>
             </div>
             <nav class="site-nav">
                 <div class="menu-button navicon">Menu </div>
 
                 <ul>
-                    <li class="hideonlarge"><a href="#">Home</a></li>
-                    <li><a href="about.html">About</a></li>
-                    <li><a href="contact.html">Contact</a></li>
+                    <li><a href="index.html">Collection</a></li>
+                    <li><a href="about.html">Background</a></li>
+                    <li><a href="contact.html">Contact Us</a></li>
+                    <li><a href="contact.html">Account</a></li>
 
                 </ul>
             </nav>
         </div>
     </header>
 
-    <main class="site-main">
+    <main>
 
         <section class="hero">
-            <h2>This is a Hero Section</h2>
-            <p>Thi is a paragraph in the Hero section, briefly summarizing this&nbsp;page.</p>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit.
-                Nemo voluptates quis culpa saepe. Velit pariatuest&nbsp;odio.</p>
-            <a href="about.html" class="button">About Us</a>
-            <a href="contact.html" class="button alt"> Contact Us</a>
+            <h1 img src="img/logo_orange.png"></h1>
+
         </section>
 
-        <section>
+        <section class="collection">
+            <h2>Collection</h2>
+            <p>Discover Your New Style!</p>
+
+        </section>
+
+        <section class="about">
+            <h2>Background</h2>
+            <p>In the Japanese language, “無” means nothingness. We try to maintain our minds every time fresh to create
+                new things using our creativity and uniqueness.</p>
+
             <div class="container">
                 <div class="row">
-                    <div class="column one-third">
-                        <img src="img/jerusalem.png" alt="Jerusalem">
-                        <h3>Our Company History</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure dolorum sint, molestias
-                            explicabo fugit sit eaque.
-                        </p>
-                        <a href="#" class="button">About Us</a>
+                    <div class="column one-half">
+                        <img src="img/kolar-unsplash.jpg" alt="Metal texture">
                     </div>
-                    <div class="column one-third">
-                        <img src="img/jerusalem.png" alt="Jerusalem">
-                        <h3>Heading 3</h3>
-                        <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure dolorum sint, molestias
-                            tenetur, explicabo fugit sit eaque.
-                        </p>
-                        <a href="#" class="button">Button</a>
+                    <div class="column one-half">
+                        <h3>philosophy</h3>
+                        <p>We creates unique and sophisticated jewelry to reflect your personality. We deliver moving,
+                            playful, and conceptual products using skilled techniques. We invite our customers to live a
+                            meaningful and enjoyable life through our products.</p>
+                        <h3>design & techniques</h3>
+                        <p>We dedicate ourselves carefully create original jewelry one by one at our studio from design
+                            to production. There are some individual differences in our products it would be the only
+                            one in the world. We hope you enjoy the unique and playful design and good fit.</p>
                     </div>
-                    <div class="column one-third">
-                        <img src="img/jerusalem.png" alt="Jerusalem">
-                        <h3>Contact Us</h3>
-                        <p>We'd love to hear from you. Call us! Email us! Reach out on social media. We're here
-                            for&nbsp;you.
+                </div>
+            </div>
 
-                        </p>
-                        <a href="contact.html" class="button">Get in Touch</a>
+
+            </div>
+        </section>
+
+        <section class="contact">
+            <h2>Contact Us</h2>
+            <div class="container">
+                <div class="row">
+                    <div class="column one-half">
+                        <h3>Customer care</h3>
+                        <blockquote>“It will change over time as you continue to use your jewelry however, we want you
+                            to enjoy it as aging!”</blockquote>
+
+                        <h4>Little tips for maintenance</h4>
+
+                        <p>Pour a small amount of mild soap like dish soap into lukewarm water and use a small, soft
+                            toothbrush to clean your jewelry. </p>
+
+                        <p>A silver-polishing cloth is a great tool to make your sterling silver jewelry shine again.
+                            However, it will not remove scratches. </p>
+
+                        <h4>Exchange and Return Policy</h4>
+                        <h4>Q & A</h4>
                     </div>
+                    <div class="column one-half">
+                        <h3>Contact Information</h3>
+                        <h4>Customer Support Desk</h4>
+                        <p>Tel:1-808-123-4567</p>
+                        <p>Monday - Friday: 9am – 6pm (HST)</p>
+                        <p>Sunday & Saturday: Closed</p>
+                    </div>
+
                 </div>
             </div>
         </section>
 
     </main>
-
 
     <footer class="site-footer">
         <div class="container">
@@ -90,6 +122,15 @@
                     <li><a href="#">Home</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
+                </ul>
+            </nav>
+            <nav class="site-info-menu">
+                <ul>
+                    <li><a href="#">Online Shop</a></li>
+                    <li><a href="#">Contact Us</a></li>
+                    <li><a href="#">Terms and Conditions</a></li>
+                    <li><a href="#">Exchange and Return</a></li>
+                    <li><a href="#">Privacy Policy</a></li>
                 </ul>
             </nav>
         </div>
