--- a/index.html
+++ b/index.html
@@ -57,16 +57,10 @@
 
       <ul>
 
-        <h4>Define & Draft</h4>
+        <h4>Palovina</h4>
         <ul>
           <li>Palovina |<a href="https://drive.google.com/file/d/1SW771jtMzXCOibFvnrA9QFsRkh8cXsZ5/view?usp=sharing">
               Project Brief</a></li>
-          <ul>
-            <li>Palovina |<a href="https://xd.adobe.com/view/ae20f45d-bfc8-46a9-641f-60a1bcd4eae0-d811/"> Conceptual
-                Plan A</a></li>
-            <li>Palovina |<a href="https://xd.adobe.com/view/d31b0621-ca2f-43c9-5062-838e85a09ba3-a52a/"> Design A
-              </a></li>
-          </ul>
 
           <ul>
             <li>Palovina |<a href="https://xd.adobe.com/view/6a0f02bf-5f24-463b-5822-cb87f12866a7-1c3e/"> Conceptual
@@ -75,14 +69,23 @@
             <li>Palovina |<a href="https://xd.adobe.com/view/669e46f2-c1e1-4a41-6499-b7eadd0917bf-10af/"> Design B
               </a></li>
           </ul>
+
+          <p>WordPress test</p>
+          <ul>
+            <li>Palovina |<a href="https://miyukingseki.com/test1/"> Test 1 (Storefront)
+              </a></li>
+            <li>Palovina |<a href="https://miyukingseki.com/test2/"> Test 2 (Astra)
+              </a></li>
+          </ul>
         </ul>
-        <h4>WordPress test</h4>
+        <h4>Mu</h4>
         <ul>
-          <li>Palovina |<a href="https://miyukingseki.com/test1/"> Test 1 (Storefront)
+          <li>Mu UI Design |<a href="img/Web 1920 – 1.png">png
             </a></li>
-          <li>Palovina |<a href="https://miyukingseki.com/test2/"> Test 2 (Astra)
+          <li>Mu UI Design |<a href="https://xd.adobe.com/view/e345ff2f-1478-45dc-4970-6cb8fac81648-9574/">xd
             </a></li>
         </ul>
+
       </ul>
 
 
