--- a/base-site-mu/index.html
+++ b/base-site-mu/index.html
@@ -25,7 +25,9 @@
     <header class="site-header toggle-nav">
         <div class="container">
             <div class="site-id">
-                <h1><a href="index.html"><img src="img/logo_black.png">mu</a></h1>
+                <h1><img src="img/mu-iconO.png" width="50px" height="50px"></h1>
+                <h1><a href="index.html"><img src="img/logo_black.png" width="100px" height="50px"></a></h1>
+
             </div>
             <nav class="site-nav">
                 <div class="menu-button navicon">Menu </div>
@@ -44,20 +46,40 @@
     <main>
 
         <section class="hero">
-            <h1 img src="img/logo_orange.png"></h1>
+
+            <div class="side-col">
+
+                <div class="menu-dropdown">
+                    <ul>
+                        <li>Collection</li>
+                        <li>Background</li>
+                        <li>Contact Us</li>
+                        <li>Account</li>
+                    </ul>
+                </div>
+            </div>
+            <div class="main-content">
+                <p img src="img/logo_orange.png"></p>
+            </div>
+
+
+
 
         </section>
 
-        <section class="collection">
-            <h2>Collection</h2>
-            <p>Discover Your New Style!</p>
+        <section id="collection">
+            <div class="metal-bg">
 
+
+                <h2 class="section-head">Collection</h2>
+                <h5>Discover Your New Style!</h5>
+            </div>
         </section>
 
-        <section class="about">
-            <h2>Background</h2>
-            <p>In the Japanese language, “無” means nothingness. We try to maintain our minds every time fresh to create
-                new things using our creativity and uniqueness.</p>
+        <section id="about">
+            <h2 class="section-head">Background</h2>
+            <h5>In the Japanese language, “無” means nothingness. We try to maintain our minds every time fresh to create
+                new things using our creativity and uniqueness.</h5>
 
             <div class="container">
                 <div class="row">
@@ -66,12 +88,16 @@
                     </div>
                     <div class="column one-half">
                         <h3>philosophy</h3>
-                        <p>We creates unique and sophisticated jewelry to reflect your personality. We deliver moving,
-                            playful, and conceptual products using skilled techniques. We invite our customers to live a
+                        <p>We creates unique and sophisticated jewelry to reflect your personality. We deliver
+                            moving,
+                            playful, and conceptual products using skilled techniques. We invite our customers to
+                            live a
                             meaningful and enjoyable life through our products.</p>
                         <h3>design & techniques</h3>
-                        <p>We dedicate ourselves carefully create original jewelry one by one at our studio from design
-                            to production. There are some individual differences in our products it would be the only
+                        <p>We dedicate ourselves carefully create original jewelry one by one at our studio from
+                            design
+                            to production. There are some individual differences in our products it would be the
+                            only
                             one in the world. We hope you enjoy the unique and playful design and good fit.</p>
                     </div>
                 </div>
@@ -81,8 +107,8 @@
             </div>
         </section>
 
-        <section class="contact">
-            <h2>Contact Us</h2>
+        <section id="contact">
+            <h2 class="section-head">Contact Us</h2>
             <div class="container">
                 <div class="row">
                     <div class="column one-half">
