--- a/base-site-mu/index.html
+++ b/base-site-mu/index.html
@@ -22,7 +22,7 @@
 
 <body>
 
-    <header class="site-header toggle-nav">
+    <header class="site-header">
         <div class="container">
             <div class="site-id">
                 <h1><img src="img/mu-iconO.png" width="50px" height="50px"></h1>
@@ -45,7 +45,7 @@
 
     <main>
 
-        <section class="hero">
+        <section id="hero">
 
             <div class="main-content">
 
@@ -129,15 +129,17 @@
     </main>
 
     <footer class="site-footer">
+
+        <nav class="site-nav">
+            <ul>
+                <li><a href="#hero">Top</a></li>
+                <li><a href="#collection">Collection</a></li>
+                <li><a href="#about">Background</a></li>
+                <li><a href="#contact">Contact Us</a></li>
+            </ul>
+        </nav>
         <div class="container">
-            <nav class="site-nav">
-                <ul>
-                    <li><a href="#">Home</a></li>
-                    <li><a href="#">About</a></li>
-                    <li><a href="#">Contact</a></li>
-                </ul>
-            </nav>
-            <nav class="site-info-menu">
+            <div class="site-info-menu">
                 <ul>
                     <li><a href="#">Online Shop</a></li>
                     <li><a href="#">Contact Us</a></li>
@@ -145,7 +147,7 @@
                     <li><a href="#">Exchange and Return</a></li>
                     <li><a href="#">Privacy Policy</a></li>
                 </ul>
-            </nav>
+            </div>
         </div>
     </footer>
 
