--- a/index.html
+++ b/index.html
@@ -70,7 +70,7 @@
               </a></li>
           </ul>
 
-          <p>WordPress test</p>
+          <li>WordPress test</li>
           <ul>
             <li>Palovina |<a href="https://miyukingseki.com/test1/"> Test 1 (Storefront)
               </a></li>
@@ -80,12 +80,13 @@
         </ul>
         <h4>Mu</h4>
         <ul>
-          <li>Mu UI Design |<a href="img/Web 1920 – 1.png">png
+          <li>UI Design |<a href="img/Web 1920 – 1.png">png
             </a></li>
-          <li>Mu UI Design |<a href="https://xd.adobe.com/view/e345ff2f-1478-45dc-4970-6cb8fac81648-9574/">xd
+          <li>UI Design |<a href="https://xd.adobe.com/view/e345ff2f-1478-45dc-4970-6cb8fac81648-9574/">xd
+            </a></li>
+          <li>Coded Site |<a href="#">github v1
             </a></li>
         </ul>
-
       </ul>
 
 
