--- a/index.html
+++ b/index.html
@@ -84,7 +84,7 @@
             </a></li>
           <li>UI Design |<a href="https://xd.adobe.com/view/e345ff2f-1478-45dc-4970-6cb8fac81648-9574/">xd
             </a></li>
-          <li>Coded Site |<a href="#">github v1
+          <li>Coded Site |<a href="https://miyukings.github.io/test-mu/">github v1
             </a></li>
         </ul>
       </ul>
